# hat-event

./: .boxhatter.yaml  .buildinfo  .gitignore  CNAME  README.rst  VERSION  compile_flags.txt  event.html  eventer.html  index.html  objects.inv  peru.yaml  pyproject.toml  requirements.pip.dev.txt  requirements.pip.runtime.txt  requirements.pip.txt  search.html  searchindex.js  server.html
.doctrees/: environment.pickle  event.doctree  eventer.doctree  index.doctree  server.doctree
.doctrees/backends/: dummy.doctree  index.doctree  lmdb.doctree
.doctrees/modules/: index.doctree
.github/workflows/: docs.yaml
_sources/: event.rst.txt  eventer.rst.txt  index.rst.txt  server.rst.txt
_sources/backends/: dummy.rst.txt  index.rst.txt  lmdb.rst.txt
_sources/modules/: index.rst.txt
backends/: dummy.html  index.html  lmdb.html
docs/: conf.py  event.rst  eventer.rst  index.rst  mariner.rst  server.rst  syncer.rst
docs/backends/: lmdb.rst
docs/server/: index.rst
docs/server/backends/: lmdb.rst
modules/: index.html
pending/docs/: syncer.rst
pending/test_pytest/test_sys/: conftest.py  test_client.py  test_modules.py  test_run.py
pending/test_pytest/test_sys/test_backends/: test_dummy.py  test_sqlite.py
playground/: dist.sh  env.sh  event-generator.sh  event-manager.sh  event-server.sh  gdb-test.gdb  gdb-test.sh  lmdb-convert.sh  lmdb-manager.sh  monitor-server.sh  pdoc.sh  requirements.sh
playground/async_process/: async_process.py
playground/lmdb/: main.py  run.sh
playground/lmdb/timeseries/: create.py  create.sh  query.py  query.sh
playground/lmdb_convert/: convert_v06_to_v07.py
py_api/: index.html  search.js
py_api/hat/: event.html
py_api/hat/event/: adminer.html  backends.html  common.html  component.html  eventer.html  manager.html  server.html
py_api/hat/event/backends/: dummy.html  (+2 more)
schemas_json/: events.yaml  main.yaml  mariner.yaml  monitor_data.yaml  server.yaml
schemas_json/backends/: lmdb.yaml  sqlite.yaml
schemas_json/mariner/: messages.yaml  server.yaml
schemas_sbs/: adminer.sbs  eventer.sbs  syncer.sbs
src_c/py/_csubscription/: allocator.c  allocator.h  module.c
src_c/py/collection/: _ctree.c
src_c/py/subscription/: _csubscription.c  csubscription.c
src_doit/: __init__.py  csubscription.py  pymodules.py
src_py/hat/event/: __init__.py  component.py  eventer_client.py  syncer_client.py
test_pytest/: test_component.py
test_pytest/test_adminer/: test_client.py  test_server.py
test_pytest/test_backends/: test_dummy.py  test_memory.py
test_pytest/test_backends/test_lmdb/: test_backend.py  test_common.py  test_conditions.py  test_environment.py  test_latestdb.py  test_refdb.py  test_systemdb.py  test_timeseriesdb.py
test_pytest/test_common/: test_collection.py  test_collection_perf.py  test_data.py  test_matches.py  test_subscription.py  test_subscription_perf.py  test_timestamp.py
test_pytest/test_eventer/: test_client.py  test_server.py
test_pytest/test_perf/: test_subscription.py
test_pytest/test_server/: test_adminer_server.py  test_engine.py  test_engine_perf.py  test_engine_runner.py  test_eventer_client.py  test_eventer_client_runner.py  test_eventer_server.py  test_runner.py
test_pytest/test_server/test_backends/: test_dummy.py  test_memory.py
test_pytest/test_sys/: test_client.py  test_modules.py
test_pytest/test_sys/test_backends/: test_dummy.py  test_sqlite.py
test_pytest/test_unit/: test_backend_engine.py  test_client.py  test_communication.py  test_engine.py  test_eventer_client.py  test_eventer_server.py  test_module_engine.py  test_registry.py  test_syncer_client.py  test_syncer_server.py
test_pytest/test_unit/test_backends/: test_dummy.py  test_memory.py
test_pytest/test_unit/test_common/: test_data.py  test_subscription.py  test_timestamp.py
test_pytest/test_unit/test_eventer/: test_client.py  test_server.py
test_pytest/test_unit/test_mariner/: test_client.py  test_encoder.py  test_server.py  test_transport.py
test_pytest/test_unit/test_server/: test_engine.py  test_eventer_server.py  test_mariner_server.py  test_runner.py  test_syncer_client.py  test_syncer_server.py
test_pytest/test_unit/test_syncer/: test_client.py  test_server.py
(+170 files in other folders)
