[project]
name = "hat-event"
version = "0.8.15"
description = "Hat event"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "appdirs ~= 1.4.4",
    "hat-aio ~= 0.7.8",
    "hat-chatter ~= 0.5.11",
    "hat-drivers ~= 0.7.0",
    "hat-json ~= 0.5.20",
    "hat-monitor >= 0.6.10, < 0.8.0",
    "hat-sbs ~= 0.6.4",
    "hat-util ~= 0.6.10",
    "lmdb ~= 1.4.1",
]

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-event.git"
Documentation = "http://hat-event.hat-open.com"

[project.optional-dependencies]
dev = [
    "hat-doit ~=0.14.6",
    "peru >= 1.3.1",
    "psutil >= 5.9.5",
    "sphinxcontrib-plantuml >= 0.23",
    "sphinxcontrib-programoutput >= 0.17",
]

[build-system]
requires = ["hat-doit ~=0.14.6"]
build-backend = "hat.doit.pep517"

[tool.hat-doit]
pytest_profile_dir = "build/profile"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
