[project]
name = "hat-event"
version = "0.9.34"
description = "Hat event"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "appdirs ~=1.4.4",
    "hat-aio ~=0.7.11",
    "hat-drivers ~=0.8.14",
    "hat-json ~=0.6.0",
    "hat-monitor ~=0.8.17",
    "hat-sbs ~=0.7.5",
    "hat-util ~=0.6.17",
    "lmdb >=1.4.1, <1.7",
]

[project.scripts]
hat-event-server = "hat.event.server.main:main"
hat-event-manager = "hat.event.manager.main:main"
hat-event-lmdb-convert = "hat.event.backends.lmdb.convert.main:main"
hat-event-lmdb-manager = "hat.event.backends.lmdb.manager.main:main"

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-event.git"
Documentation = "http://hat-event.hat-open.com"

[project.optional-dependencies]
dev = [
    "hat-doit ~=0.16.0",
    "peru >=1.3.1",
    "psutil >=5.9.5",
    "sphinxcontrib-plantuml >=0.23",
    "sphinxcontrib-programoutput >=0.17",
]

[build-system]
requires = ["hat-doit ~=0.16.0"]
build-backend = "hat.doit.pep517"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
